    * Added most IIDC 1.31 functions and definitions
	
2004-09-30 Damien <ddouxchamps@users.sf.net>
    * Introduced the IIDC_VERSION_X_XX definitions. Interface version is now 12.

2004-09-30 Damien <ddouxchamps@users.sf.net>
    * Fixed small issue in the IIDC version detection
	
2004-10-28 Damien <ddouxchamps@users.sf.net>
    * Applied a patch from F. Devernay to allow compilation on x86_64.
	
2004-11-11 Damien <ddouxchamps@users.sf.net>
    * fixed format quadlets per packet access in _dc1394_get_quadlets_per_packet()
	
2004-11-12 Damien <ddouxchamps@users.sf.net>
    * update for previous fix: use NUM_FRAMERATES
	
2005-01-26 Damien <ddouxchamps@users.sf.net>
    * update the get/set_operation_mode functions.
    * applied a patch from Yves Jaeger to add software trigger functions
    * updated the configure.in script to link properly against libraw1394 (Peter 'p2' De Schrijver)
    * removed the deprecated file acconfig.h and updated configure.in accordingly.
	
2005-01-27 Damien <ddouxchamps@users.sf.net>
    * fixed 1394b operation thanks to inputs and patches from Christoph Ganser.

2005-01-31 Damien <ddouxchamps@users.sf.net>
    * fixed 1394b bandwidth usage

2005-02-13 Damien <ddouxchamps@users.sf.net>
    * Version 1.1.0

2005-02-28 Damien <ddouxchamps@users.sf.net>
    * fixed definition of IIDC_VERSION_MIN (thx to D. Bahadir for spotting this)
	
2005-03-25 Damien <ddouxchamps@users.sf.net>
    * added missing feature strings (thx to Obelix for spotting this)
	
2005-04-06 Damien <ddouxchamps@users.sf.net>
    * fixed bandwidth usage estimation
	
2005-04-15 Damien <ddouxchamps@users.sf.net>
    * Merged the Allied Vision Tech extensions of Pierre Moos.

2005-08-18 Damien <ddouxchamps@users.sf.net>
    * fixed memory leak in capture functions (dma device name not freed)
    * fixed trigger capabilities detection (Markus Niebel)
    * fixed some confusion between raw1394_new_handle and dc1394_create_handle
      (Thanks to Thorondor)